--- a/trunk/application/config/store.ini
+++ b/trunk/application/config/store.ini
@@ -3,7 +3,7 @@ db.adapter = "pdo_mysql"
 db.params.dbname = "storefront"
 db.params.host = "localhost"
 db.params.username = "root"
-db.params.password = "root"
+db.params.password = "allpay"
 
 [development : production]
 
