--- a/application/bootstrap.php.dist
+++ b/application/bootstrap.php.dist
@@ -1,14 +1,23 @@
 <?php
-set_include_path('.' . PATH_SEPARATOR . '../library' . PATH_SEPARATOR . get_include_path());
+$paths = array(
+    get_include_path(),
+    '../library',
+    '../library/Incu',
+    '../library/Zapp'
+);
+set_include_path(join(PATH_SEPARATOR, $paths));
 
 require 'Zend/Loader.php';
 
 Zend_Loader::registerAutoload();
 
+error_reporting(E_ALL);
+
+$app = new Zend_Application('dev');
+$app->bootstrap();
+
 /**
  * Setup Front controller
  */
 $front = Zend_Controller_Front::getInstance();
-
-$front->registerPlugin( new SF_Plugin_Initialization('@ENVIRONMENT@') );
 $front->dispatch();
