--- a/branches/TRY-KP-Zapp/application/application.php.dist
+++ b/branches/TRY-KP-Zapp/application/application.php.dist
@@ -9,7 +9,7 @@ set_include_path(implode(PATH_SEPARATOR, $paths));
 defined('APPLICATION_PATH')
     or define('APPLICATION_PATH', realpath(dirname(__FILE__) . '/../application'));
 defined('APPLICATION_ENV')
-    or define('APPLICATION_ENV', 'development');
+    or define('APPLICATION_ENV', '@ENVIRONMENT@');
 
 require_once 'Zend/Application.php';
 
