--- a/application/config/store.ini
+++ b/application/config/store.ini
@@ -1,10 +1,28 @@
-[production]
-db.adapter = "pdo_mysql"
-db.params.dbname = "storefront"
-db.params.host = "localhost"
-db.params.username = "root"
-db.params.password = "allpay"
+[bootstrap]
+autoloadernamespaces.0 = "Zend_"
+autoloadernamespaces.1 = "SF_"
+
+phpsettings.display_errors = 0
+phpsettings.error_reporting = 8191
+phpsettings.date.timezone = "Europe/London"
+
+bootstrap.path = APPLICATION_PATH"/bootstrap/Bootstrap.php"
+
+resources.frontcontroller.moduledirectory = APPLICATION_PATH"/modules"
+resources.frontcontroller.defaultmodule = "storefront"
+resources.frontcontroller.throwerrors = false
+resources.frontcontroller.params.0.env = APPLICATION_ENVIRONMENT
+
+resources.db.adapter = "PDO_MYSQL"
+resources.db.isdefaulttableadapter = true
+resources.db.params.dbname = "storefront"
+resources.db.params.username = "root"
+resources.db.params.password = "root"
+resources.db.params.hostname = "localhost"
+
+[production : bootstrap]
 
 [development : production]
+phpsettings.display_errors = 1
 
 [test : production]
