--- a/application/config/store.ini
+++ b/application/config/store.ini
@@ -19,6 +19,7 @@ resources.db.params.dbname = "storefront"
 resources.db.params.username = "root"
 resources.db.params.password = "root"
 resources.db.params.hostname = "localhost"
+resources.db.params.driver_options.1002 = "SET NAMES UTF8;"
 
 [production : bootstrap]
 
