--- a/branches/TRY-KP-Zapp/application/config/store.ini
+++ b/branches/TRY-KP-Zapp/application/config/store.ini
@@ -23,7 +23,8 @@ resources.db.params.driver_options.1002 = "SET NAMES UTF8;"
 
 [production : bootstrap]
 
-[development : production]
+[development : bootstrap]
 phpsettings.display_errors = 1
+resources.frontcontroller.throwerrors = true
 
-[test : production]
+[test : bootstrap]
