--- a/branches/TRY-KP-Zapp/application/config/store.ini
+++ b/branches/TRY-KP-Zapp/application/config/store.ini
@@ -11,7 +11,7 @@ bootstrap.path = APPLICATION_PATH"/bootstrap/Bootstrap.php"
 resources.frontcontroller.moduledirectory = APPLICATION_PATH"/modules"
 resources.frontcontroller.defaultmodule = "storefront"
 resources.frontcontroller.throwerrors = false
-resources.frontcontroller.params.0.env = APPLICATION_ENVIRONMENT
+resources.frontcontroller.params.prefixDefaultModule = true
 
 resources.db.adapter = "PDO_MYSQL"
 resources.db.isdefaulttableadapter = true
