--- a/application/config/store.ini
+++ b/application/config/store.ini
@@ -6,27 +6,28 @@ phpsettings.display_errors = 0
 phpsettings.error_reporting = 8191
 phpsettings.date.timezone = "Europe/London"
 
-bootstrap.path = APPLICATION_PATH"/bootstrap/Bootstrap.php"
+bootstrap.path = APPLICATION_PATH"/modules/storefront/Bootstrap.php"
+bootstrap.class = "Storefront_Bootstrap"
 
-resources.frontcontroller.moduledirectory = APPLICATION_PATH"/modules"
-resources.frontcontroller.defaultmodule = "storefront"
-resources.frontcontroller.throwerrors = false
-resources.frontcontroller.params.prefixDefaultModule = true
-resources.frontcontroller.plugins.action = "SF_Plugin_Action"
-resources.frontcontroller.plugins.admin = "SF_Plugin_AdminContext"
+storefront.resources.frontcontroller.moduledirectory = APPLICATION_PATH"/modules"
+storefront.resources.frontcontroller.defaultmodule = "storefront"
+storefront.resources.frontcontroller.throwexceptions = false
+storefront.resources.frontcontroller.params.prefixDefaultModule = true
+storefront.resources.frontcontroller.plugins.action = "SF_Plugin_Action"
+storefront.resources.frontcontroller.plugins.admin = "SF_Plugin_AdminContext"
 
-resources.db.adapter = "PDO_MYSQL"
-resources.db.isdefaulttableadapter = true
-resources.db.params.dbname = "storefront"
-resources.db.params.username = "root"
-resources.db.params.password = "root"
-resources.db.params.hostname = "localhost"
-resources.db.params.driver_options.1002 = "SET NAMES UTF8;"
+storefront.resources.db.adapter = "PDO_MYSQL"
+storefront.resources.db.isdefaulttableadapter = true
+storefront.resources.db.params.dbname = "storefront"
+storefront.resources.db.params.username = "root"
+storefront.resources.db.params.password = "allpay"
+storefront.resources.db.params.hostname = "localhost"
+storefront.resources.db.params.driver_options.1002 = "SET NAMES UTF8;"
 
 [production : bootstrap]
 
 [development : bootstrap]
 phpsettings.display_errors = 1
-resources.frontcontroller.throwerrors = true
+storefront.resources.frontcontroller.throwexceptions = true
 
 [test : bootstrap]
