--- a/trunk/application/config/store.ini
+++ b/trunk/application/config/store.ini
@@ -1,6 +1,6 @@
 [bootstrap]
-autoloadernamespaces.0 = "Zend_"
-autoloadernamespaces.1 = "SF_"
+autoloadernamespaces[] = "Zend_"
+autoloadernamespaces[] = "SF_"
 
 phpsettings.display_errors = 0
 phpsettings.error_reporting = 8191
@@ -22,6 +22,8 @@ resources.db.params.username = "root"
 resources.db.params.password = "root"
 resources.db.params.hostname = "localhost"
 resources.db.params.driver_options.1002 = "SET NAMES UTF8;"
+
+resources.modules[] =
 
 [production : bootstrap]
 
