--- a/application/config/store.ini
+++ b/application/config/store.ini
@@ -12,7 +12,6 @@ resources.frontcontroller.moduledirectory = APPLICATION_PATH"/modules"
 resources.frontcontroller.defaultmodule = "storefront"
 resources.frontcontroller.throwexceptions = false
 resources.frontcontroller.params.prefixDefaultModule = true
-resources.frontcontroller.plugins.action = "SF_Plugin_Action"
 resources.frontcontroller.plugins.admin = "SF_Plugin_AdminContext"
 
 resources.db.adapter = "PDO_MYSQL"
@@ -21,7 +20,7 @@ resources.db.params.dbname = "storefront"
 resources.db.params.username = "root"
 resources.db.params.password = "root"
 resources.db.params.hostname = "localhost"
-resources.db.params.driver_options.1002 = "SET NAMES UTF8;"
+resources.db.params.charset = "UTF8"
 
 resources.modules[] =
 
