Adding graceful error handling

--- a/application/config/store.ini
+++ b/application/config/store.ini
@@ -24,10 +24,14 @@ resources.db.params.charset = "UTF8"
 
 resources.modules[] =
 
+errorhandling.graceful = true
+errorhandling.email = thepope@thepopeisdead.com
+
 [production : bootstrap]
 
 [development : bootstrap]
 phpsettings.display_errors = 1
 resources.frontcontroller.throwexceptions = true
+errorhandling.graceful = false
 
 [test : bootstrap]
