--- a/trunk/application/config/store.ini
+++ b/trunk/application/config/store.ini
@@ -25,7 +25,7 @@ resources.db.params.charset = "UTF8"
 resources.modules[] =
 
 errorhandling.graceful = true
-errorhandling.email = thepope@thepopeisdead.com
+errorhandling.email = noemail@noemail.org
 
 [production : bootstrap]
 
