Adding integration testsusing Zend_Test

--- a/application/config/store.ini
+++ b/application/config/store.ini
@@ -35,3 +35,4 @@ resources.frontcontroller.throwexceptions = true
 errorhandling.graceful = false
 
 [test : bootstrap]
+phpsettings.display_errors = 1
