--- a/application/config/store.ini
+++ b/application/config/store.ini
@@ -35,4 +35,5 @@ resources.frontcontroller.throwexceptions = true
 errorhandling.graceful = false
 
 [test : bootstrap]
+resources.db.params.dbname = "storefront_test"
 phpsettings.display_errors = 1
