--- a/branches/extended/dependencyInjection/application/config/store.ini
+++ b/branches/extended/dependencyInjection/application/config/store.ini
@@ -1,6 +1,7 @@
 [bootstrap]
 autoloadernamespaces[] = "Zend_"
 autoloadernamespaces[] = "SF_"
+autoloadernamespaces[] = "Yadif_"
 
 phpsettings.display_errors = 0
 phpsettings.error_reporting = 8191
