--- a/branches/extended/dependencyInjection/application/config/store.ini
+++ b/branches/extended/dependencyInjection/application/config/store.ini
@@ -3,6 +3,8 @@ autoloadernamespaces[] = "Zend_"
 autoloadernamespaces[] = "SF_"
 autoloadernamespaces[] = "Yadif_"
 
+pluginpaths.SF_Application_Resource="SF/Application/Resource"
+
 phpsettings.display_errors = 0
 phpsettings.error_reporting = 8191
 phpsettings.date.timezone = "Europe/London"
@@ -28,6 +30,8 @@ resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
 resources.layout.layout = "main"
 
 resources.modules[] =
+resources.yadif[] =
+
 
 errorhandling.graceful = true
 errorhandling.email = noemail@noemail.org
