--- a/dependencyInjection/application/config/store.ini
+++ b/dependencyInjection/application/config/store.ini
@@ -32,6 +32,11 @@ resources.layout.layout = "main"
 resources.modules[] =
 resources.yadif[] =
 
+storefront.model.cache.options.frontend = "Class"
+storefront.model.cache.options.frontendOptions.lifetime = 1800
+storefront.model.cache.options.frontendOptions.automatic_serialization = 1800
+storefront.model.cache.options.backend = "File"
+storefront.model.cache.options.backendOptions.cache_dir = APPLICATION_PATH"/../data/cache/db"
 
 errorhandling.graceful = true
 errorhandling.email = noemail@noemail.org
