--- a/trunk/application/config/store.ini
+++ b/trunk/application/config/store.ini
@@ -28,6 +28,8 @@ resources.layout.layout = "main"
 
 resources.modules[] =
 
+product.index = APPLICATION_PATH"/../data/index/product"
+
 errorhandling.graceful = true
 errorhandling.email = noemail@noemail.org
 
