Implementing the new appnamespace feature for Zend_Application

--- a/application/config/store.ini
+++ b/application/config/store.ini
@@ -6,7 +6,9 @@ phpsettings.display_errors = 0
 phpsettings.error_reporting = 8191
 phpsettings.date.timezone = "Europe/London"
 
-bootstrap.path = APPLICATION_PATH"/bootstrap/Bootstrap.php"
+bootstrap.path = APPLICATION_PATH"/modules/storefront/Bootstrap.php"
+
+appnamespace="Storefront"
 
 resources.frontcontroller.moduledirectory = APPLICATION_PATH"/modules"
 resources.frontcontroller.defaultmodule = "storefront"
